[package]
name = "test-parking_lot-bloat"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parking_lot = "0.9.0"
parking_lot = { git = "https://github.com/quininer/parking_lot", branch = "inline-less" }

[features]
inline-less = [ "parking_lot/inline-less" ]
